# zsl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: utils.cmake
tests/: CMakeLists.txt  test_logging.cc
zsl/: log.cc  log.h  version.h
